css/main.scss
---
---

$body-typeface: "Source Serif 4", serif;
$heading-typeface: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif; 
$mono-typeface: IBM Plex Mono, monospace;
$text-width: 600px;

.source-serif-4-font {
  font-family: "Source Serif 4", serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

:root {
  --body-font-size: 1.15rem;
  --line-height: 2rem;
  --h1-font-size: 1.5rem;
  --h2-font-size: 1.125rem;
  --small-font-size: .9rem;
  --text-width: 650px;
  --quote-font-size:.95rem
  --nav-font: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
}


@media (max-width: 600px) {
  :root {
    --body-font-size: 1.125rem;
    --line-height: 1.575rem; 
    --h1-font-size: 1.625rem; 
    --h2-font-size: 1.375rem; 
    --small-font-size: 1rem; 
    --quote-font-size: 1rem;
  }

  .about-picture {
    padding: 5%;
  }

}

html {
  --box-background-color: #f8f9fa;
  --extra-light-text-color: hsl(240, 1%, 45%);
  --light-border-color: hsl(0, 0%, 90%);
  --light-text-color: hsl(240, 1%, 35%);
  --link-color: #fa5252;
  --main-background-color: #f0f9f9;
  --main-text-color: #232323;
  --underline-color: hsl(0, 0%, 50%);
}

/* @media (prefers-color-scheme: dark) {
  html {
    --box-background-color: hsl(0, 0%, 20%);
    --extra-light-text-color: hsl(0, 0%, 55%);
    --light-border-color: hsl(0, 0%, 30%);
    --light-text-color: hsl(0, 0%, 65%);
    --link-color: hsl(193, 85%, 50%); 
    --main-background-color: hsl(200, 3%, 12%);
    --main-text-color: hsl(0, 0%, 85%); 
    --underline-color: hsl(0, 0%, 50%); 
  } 
  p {
    letter-spacing: .005em;
  }
} */

html {
  background-color: var(--main-background-color);
  color: var(--main-text-color); 
  font-family: $body-typeface;
  font-feature-settings: "kern" on;
  font-variant-ligatures: common-ligatures;
  height: 100%;
  margin: 0;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

* {
  margin: var(--line-height) 0 0 0;
  padding: 0;
}

body {
  align-items: center;
  display: flex;
  flex-direction: column;
  height: 100%;
  margin: 0;
  padding: 0 7.5%;
}

p, li, details, summary {
  font-size: var(--body-font-size);
  line-height: 1.4; 
}

.avatar {
  display: block;
	width: 55px;
	height: 55px;
	border-radius: 50%; 
}

header {
  display: flex;
  justify-content: space-between;
 align-items: center;
  padding: 0; 
  margin-bottom: 40px;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}


nav {
  color: var(--light-text-color);
  margin: 0 0;
}

nav a {
    color: var(--light-text-color);
    text-decoration: none;
  }
 
nav a:hover {
	text-decoration: none;
    }
 
nav .left-section {
	text-align: left;
    margin: -10px 0 0;
    display: block;
   	position: relative;
    }
    
nav .right-section {
	text-align: right;
	display: block;
    }

main {
  flex: 1;
  margin: 0;
  max-width: var(--text-width);
  padding-bottom: 3rem;
  width: 100%;
}

nav a[href="/"] {
    font-weight: 700;
}

nav a[href='/feed.rss'] {
  font-size: 0 !important;
}

nav a[href='/feed.rss']::before {
  font-family: "FontAwesome";
  display: inline-block;
  font-size: .85rem;
  color: var(--light-text-color);
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-rendering: auto;
  padding-left: 7px;
  -webkit-font-smoothing: antialiased;
}

nav a[href='/feed.rss']::before {
  content: "\f09e";
}

nav a[href='/contact'] {
  font-size: 0 !important;
}

nav a[href='/contact']::before {
  font-family: "FontAwesome";
  display: inline-block;
  font-size: .85rem;
  color: var(--light-text-color);
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-rendering: auto;
  padding-left: 7px;
  -webkit-font-smoothing: antialiased;
}

nav a[href='/contact']::before {
  content: "\f1d8";
}
	
nav .title {
	font-weight: 700;
    display: block;
    margin-top: 0;
    margin-bottom: 5px;
    font-size: var(--h1-font-size);
    }
    
.blogblurb {
	display: block;
    margin-bottom: 40px;
    margin-top: 0;
    padding-bottom: 15px;
    border-bottom: 1px solid var(--light-border-color);
    }    


time {
  color: var(--light-text-color);
  font-size: var(--small-font-size);
  font-family: $heading-typeface;
}

.post-author-and-time {
  color: var(--light-text-color);
 /* margin-top: calc(.125 * var(--line-height)); */
  font-family: $heading-typeface;
}

hr {
  margin: 30px auto;
  border: none;
  height: 1px;
  background: #ccc;
}

h1 {
  font-family: $heading-typeface;
  color: var(--light-text-color);
}

h1.post-title {
  margin-bottom: 20px;
}

h1 a {
  color: var(--light-text-color);
}

h2, h3 {
  font-family: $heading-typeface;
  font-size: var(--h2-font-size);
  margin: calc(var(--line-height) * 1.5) 0 0 0;
  font-weight: bold;
}

h2 + p, h3 + p {
  margin-top: calc( var(--line-height) * .75);
}

ul, ol {
  list-style-position: outside;
  padding-left: var(--line-height);
}

li + li, ul li ul, ul li ul li {
  margin: calc(.5 * var(--line-height)) 0 0 0;
}

blockquote {
  margin: var(--line-height) 0;
  padding: 0 1.5em;
  p {
    font-size: var(--quote-font-size);
    hanging-punctuation: first;
    line-height: 1.3;
  }
  li {
    padding: 0;
  }
}

.quote-attribution {
  font-style: italic;
  margin-top: calc( .5 * var(--line-height));
}

a {
  color: var(--main-text-color);
  text-decoration-color: var(--underline-color);
}
 
pre {
  font-family: $mono-typeface;
  font-size: 1rem;
  hanging-punctuation: none;
  overflow: scroll;
  padding: var(--line-height); 
}

code {
  font-family: $mono-typeface;
  font-size: 1rem;
  line-height: 1.4;
}

p code {
  background-color: var(--box-background-color);
}

img {
  display: block;
  height: auto;
  margin: 0 auto;
  max-width: 100%;
}

figcaption {
  color: var(--light-text-color);
  margin-top: calc(.5 * var(--line-height));
  text-align: center;
}

aside, .callout {
  background-color: var(--box-background-color);
  border-left: 5px solid var(--light-border-color);
  margin: calc(1.25 *var(--line-height)) 0;
  padding: calc(.5 * var(--line-height));
  * + * {
    margin: 0;
  }
  h2, h3 {
    font-size: var(--small-font-size);
    letter-spacing: 0;
    margin: 0 0 0 0;
    padding-top: 0;
    text-transform: none;
  }
  h2 + *, h3 + * {
    margin-top: calc(.25 * var(--line-height));
  }
  p, li {
    font-size: var(--small-font-size);
  }
  p + p {
    margin: calc(.75 * var(--line-height)) 0 0 0; 
  }
  li {
    margin: calc(.25 * var(--line-height)) 0 0 0; 
  }
}

.blog-listing-link {
  color: var(--main-text-color);
  text-decoration: none;
  font-variant-numeric: normal;
}

.blog-listing-link + time {
  color: var(--main-text-color);
}

.tag-list {
  background-color: var(--main-background-color);
  border: none;
  display: flex;
  flex-wrap: wrap;
  margin-top: calc(.5 * var(--line-height));
  padding: 0;
  a, button {
    background-color: var(--box-background-color);
    border: 1px solid var(--light-border-color);
    border-radius: 4px;
    color: var(--main-text-color);
    flex-grow: .01;
    font-size: var(--small-font-size);//var(--body-font-size);
    font-variant-numeric: oldstyle-nums;
    margin: 1% 2% 1% 0;
    padding: .25em .75em .25em .55em;
    text-decoration: none;
  }
  a:hover {
    background-color: var(--main-background-color);
  }
}

.posts-by-tag {
  h2 {
    text-transform: uppercase;
    letter-spacing: .1em;
  }
  .blog-listing-link {
    font-weight: 400;
  }
}

// homepage 

.internal-link, .internal-link a {
  color: var(--light-text-color);
  font-size: var(--small-font-size);
  text-decoration: none;
}

.about-picture {
  float: right; 
  margin: 0; 
  padding: 1% 5% 5% 5%;
  width: clamp(100px, 200px, 50%);
  img {
    border: 1px solid var(--main-background-color);
    border-radius: 1%;
  }
} 

.copy-buttons {
  margin-top: calc(.5 * var(--line-height));
}

.sitemap a {
  text-decoration: none;
}

.sitemap h2 {
  letter-spacing: 0;
  text-transform: none;
}

.sitemap ul {
  list-style-type: none;
}

iframe {margin: 24px 0!important;}

/* Youtube responsive video container */
.videoWrapper {
  position: relative;
  padding-bottom: 56.25%; /* 16:9 */
  padding-top: 15px;
  height: 0;
}
.videoWrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.footnotes {
  border-top: 1px solid #ccc;
  padding-top: 10px;
}

.footnotes li, .footnotes p {
  color: var(--light-font-color);
  font-size: var(--small-font-size);
}

.search-bar {
  display: flex;
  margin-top: calc(.25 * var(--line-height));
}

.search-bar-input {
  margin-top: -25px;//calc(-.5 * var(--line-height));
}

.form-control {
  background-color: var(--box-background-color);
  border: 1px solid var(--light-border-color);
  border-radius: 4px;
  color: var(--main-text-color);
  height: calc( 1.5 * var(--line-height));
  flex: 5 1 auto;
  font-family: $body-typeface;
  font-size: var(--small-font-size);
  margin-top: 0;
  min-width: 50%;
  padding-left: .5em;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  -o-appearance: none;
}

.form-control::placeholder {
	color: var(--light-text-color);
}

.btn-default {
  background-color: var(--box-background-color);
  border: 1px solid var(--light-border-color);
  border-radius: 4px;
  color: var(--main-text-color);
  font-family: $body-typeface;
  font-size: var(--small-font-size);
  font-weight: normal;
  margin: 0 0 0 .5em;
  padding: 0 .5em;
}

.btn-default:hover {
  background-color: var(--main-background-color);
  color: var(--link-color);
  text-decoration: underline;
}

.small-caps { 
  letter-spacing: .075em;
}

.index-title {
  text-transform: uppercase;
  letter-spacing: .1em;
}

.input-label {
  color: var(--main-text-color);
  font-weight: bold;
  font-size: var(--body-font-size);
  margin-bottom: 0;
}

.quarter-line-space {
  display: block;
  margin-top: calc( .25 * var(--line-height));
}

// Note styling 

.note-entry:first-of-type {
  border: none;
}


.note-entry {
  border-top: 1px solid var(--light-border-color);
  margin: 0;
  padding: calc(1.25 * var(--line-height)) 0;
  h1 {
    font-family: $heading-typeface;
    margin: 20px 0;
  }
  h2 {
    font-family: $heading-typeface;
    font-size: var(--body-font-size);
  }
  h1 + p, h2 + p {
    margin-top: calc( var(--line-height) * .25)
  }
}

.note-date-line {
  color: var(--light-text-color);
  font-size: var(--small-font-size);
  a {
    color: var(--light-text-color);
    text-decoration: none;
    font-family: $heading-typeface;
    font-size: var(--small-font-size);
  }
}

mark {
  background-color: #FFE500;//hsl(60, 90%, 45%);
}

// link hover styles at the end so they apply to all links

a:hover {
  color: var(--link-color);
  text-decoration: underline;
  text-decoration-style: solid;
  text-decoration-color: var(--link-color);
}

a:visited:hover {
  color: #e33; //#EA1C00;
}

/* Footer */

.footer {
  border-top: 1px solid #ccc;
  width: 100%;
 padding-top: 20px;
margin-top: 30px;   
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: var(--small-font-size);
  color: var(--text);
  }
  
.contact {
display: flex;
  justify-content: center;
 align-items: center;
  gap: 8em;
  }


.contact .social {
  padding-left: 20px;
  display: block;
    font-size: var(--small-font-size);
  }
  
.contact .info {
  padding-right: 20px;
  display: block;
    font-size: var(--small-font-size);
  }
  
.contact ul {
list-style-type: none;
  padding: 0;
  margin: 0;

  }
  
.contact ul li {
padding: 0;
  margin: 0;
  }
  
.contact ul a {
text-decoration: none;
  font-size: var(--small-font-size);
  }
  
.siteinfo {
margin-top: 20px;
  display: block;
text-align: center;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: var(--small-font-size);
  color: var(--text);
  }

.icon { 
     display: inline;
     position: relative;
      top: 0.2em;
  }
   

